<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FingerSinger</string>
    <string name="action_exit">exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="fileTitle">FileBrowser</string>
    <string name="action_playCurrent">从此开播</string>
    <string name="action_playWhole">播放整曲</string>
    <string name="action_save">保存</string>
    <string name="action_history">历史曲目</string>
    <string name="action_import">导入图片</string>
    <string name="action_export">导出曲目</string>
    <string name="button_color">button used for change color</string>
    <string name="button_status">button used for change status</string>
    <string name="button_undo">button used for undo</string>
    <string name="prompt_status_eraser">现在点击想要去掉的曲线即可整条删除</string>
    <string name="prompt_status_voice">调整对应颜色的线条音量</string>
    <string name="prompt_status_draw">开始在屏幕上作画吧！右下角色块选择“音&amp;色”~</string>
    <string name="prompt_stop_play">播放完毕</string>
    <string name="button_pointer">used for move canvas and point out the start of the current play</string>
    <string name="action_export_audio">导出声音</string>
    <string name="action_export_picture">导出图像</string>
    <string name="text_yin">音</string>
    <string name="text_liang">量</string>
    <string name="text_speed">速度</string>
    <string name="continue_text">点击屏幕继续</string>
    <string name="button_page_left">向左翻画布</string>
    <string name="button_page_right">向右翻画布</string>
    <string name="button_menu">provide more functions</string>
    <string name="button_play_current">play from current position</string>
    <string name="menu_des">some menu items</string>

</resources>
