<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/background">
    
    <ListView
        android:id="@+id/list_view"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:textColor="@android:color/background_light" >
    </ListView>
    
    <LinearLayout
        android:id="@+id/view_draw"
        android:layout_width="750dp"
        android:layout_height="440dp"
        android:layout_above="@+id/tempo_bar"
        android:layout_alignParentRight="true"
        android:layout_toLeftOf="@+id/button_undo"
        android:layout_toRightOf="@+id/button_menu"
        android:orientation="horizontal" >

    </LinearLayout>
  
    <LinearLayout
        android:id="@+id/tempo_bar"
        android:layout_width="700dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/view_draw"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_undo"
        android:layout_alignTop="@+id/button_color" 
        android:orientation="horizontal" >
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/voice_bar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#80000000"
        android:orientation="vertical" 
        android:visibility="gone">
        
        <SeekBar
		    android:id="@+id/seekBar1"
		    android:background="@color/green"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="120dp"
		    android:layout_marginLeft="120dp"
		    android:layout_marginTop="30dp" 
		    android:max="100"
		    android:progress="80" />
	
		<SeekBar
		    android:id="@+id/seekBar2"
		    android:background="@color/yellow"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/seekBar1"
		    android:layout_alignRight="@+id/seekBar1"
		    android:layout_alignLeft="@+id/seekBar1"
		    android:layout_marginTop="15dp"
		    android:max="100"
		    android:progress="80" />
			
		<SeekBar
		    android:id="@+id/seekBar3"
		    android:background="@color/red"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/seekBar2"
		    android:layout_alignRight="@+id/seekBar2"
		    android:layout_alignLeft="@+id/seekBar2"
		    android:layout_marginTop="15dp"
		    android:max="100"
		    android:progress="80" />
			
		<SeekBar
		    android:id="@+id/seekBar4"
		    android:background="@color/blue"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/seekBar3"
		    android:layout_alignRight="@+id/seekBar3"
		    android:layout_alignLeft="@+id/seekBar3"
		    android:layout_marginTop="15dp"
		    android:max="100"
		    android:progress="80" />
	
		<SeekBar
		    android:id="@+id/seekBar5"
		    android:background="@color/purple"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/seekBar4"
		    android:layout_alignRight="@+id/seekBar4"
		    android:layout_alignLeft="@+id/seekBar4"
		    android:layout_marginTop="15dp"		    
		    android:max="100"
		    android:progress="80" />

		<EditText
		    android:id="@+id/editText1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toLeftOf="@+id/seekBar2"
		    android:layout_alignTop="@+id/seekBar1"
		    android:layout_marginLeft="50dp"
		    android:enabled="false"
		    android:inputType="text"
		    android:textColor="#FFFFFFFF"
		    android:background="#00000000"
		    android:text="@string/text_yin"
		    android:textSize="50sp"
		    android:ems="10" >
		</EditText>
		
		<EditText
		    android:id="@+id/editText2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/editText1"
		    android:layout_toLeftOf="@+id/seekBar2"
		    android:layout_alignBottom="@+id/seekBar5"
		    android:layout_marginLeft="50dp"
		    android:textSize="50sp"
		    android:enabled="false"
		    android:inputType="text"
		    android:text="@string/text_liang"
		    android:textColor="#FFFFFFFF"
		    android:background="#00000000"
		    android:ems="10" >
		</EditText>

		<com.game.fingersinger.VerticalSeekBar
	        android:id="@+id/speedBar"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="30dp"
	        android:layout_marginBottom="80dp"
	        android:layout_marginRight="35dp"
	        android:max="80"
	        android:progress="20" >
		</com.game.fingersinger.VerticalSeekBar>
  
		<EditText
		    android:id="@+id/editText3"
		    android:layout_width="80dp"
		    android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="40dp"
			android:layout_alignParentRight="true"
		    android:textSize="30sp"
		    android:enabled="false"
		    android:inputType="text"
		    android:textColor="#FFFFFFFF"
		    android:background="#00000000"
		    android:text="@string/text_speed"
		    android:ems="10" >
		</EditText>
		
    </RelativeLayout>

    <ImageButton
        android:id="@+id/button_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" 
        android:src="@drawable/button_undo" 
        android:background="#00000000"
        android:contentDescription="@string/button_undo" >
    </ImageButton>

    <ImageButton
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/button_status_draw" 
        android:background="#00000000"
        android:contentDescription="@string/button_menu">

    </ImageButton>

    <ImageButton
        android:id="@+id/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/button_color_green"
        android:background="#00000000"
        android:contentDescription="@string/button_color">
    </ImageButton>
    
    <EditText
	    android:id="@+id/name_editor"  
	    android:layout_width="match_parent"  
	    android:layout_height="wrap_content" 
	    android:imeOptions="actionDone"
	    android:singleLine="true" 
	    android:inputType="text"
	    android:visibility="gone">  
	</EditText>  
	
    <ImageView
        android:id="@+id/pointer"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
		android:layout_alignLeft="@+id/tempo_bar"
	    android:background="#00000000"
        android:src="@drawable/pointer_unpress" 
        android:contentDescription="@string/button_pointer"/>
  
</RelativeLayout>